@@ -1,4 +1,4 @@
-from fs.utils import movefile, contains_files
+from fs.utils import movefile, movefile_non_atomic, contains_files
 from fs.commands import fscp
 import sys
 
@@ -10,8 +10,11 @@ Move files from SOURCE to DESTINATION"""
     def get_verb(self):
         return 'moving...'
     
-    def get_action(self):        
-        return movefile
+    def get_action(self):  
+        if self.options.threads > 1:      
+            return movefile_non_atomic
+        else:
+            return movefile
     
     def post_actions(self):
         for fs, dirpath in self.root_dirs:
